--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -126,4 +126,29 @@ html, body, #root {
   body {
     @apply bg-background text-foreground;
   }
+  :root {
+    --sidebar: 225 30% 14%;   /* #1A1D2E */
+  --sidebar-foreground: 0 0% 100%;
+    /* --sidebar-background: #1A1D2E; */
+    /* --sidebar-foreground: oklch(0.145 0 0); */
+    --sidebar-primary: oklch(0.205 0 0);
+    --sidebar-primary-foreground: oklch(0.985 0 0);
+    --sidebar-accent: oklch(0.97 0 0);
+    --sidebar-accent-foreground: oklch(0.205 0 0);
+    --sidebar-border: oklch(0.922 0 0);
+    --sidebar-ring: oklch(0.708 0 0);
+  }
+
+  .dark {
+    --sidebar-background: #1A1D2E;
+    --sidebar: oklch(0.205 0 0);
+    --sidebar-foreground: oklch(0.985 0 0);
+    --sidebar-primary: oklch(0.488 0.243 264.376);
+    --sidebar-primary-foreground: oklch(0.985 0 0);
+    --sidebar-accent: oklch(0.269 0 0);
+    --sidebar-accent-foreground: oklch(0.985 0 0);
+    --sidebar-border: oklch(1 0 0 / 10%);
+    --sidebar-ring: oklch(0.439 0 0);
+  }
+
 }
